fix mobile responsive overflow

--- a/public/css/root.css
+++ b/public/css/root.css
@@ -121,7 +121,7 @@ body {
 
 
   @media (max-width: 800px) {
-    body {
+    body ,html {
     overflow-x: hidden;
 
     }
